# p170b328-code-examples

./: .gitignore
02-Procesai-gijos/SimpleProgramCS/: SimpleProgramCS.sln
02-Procesai-gijos/conditionals/: main.go
02-Procesai-gijos/elementari_programa/: CMakeLists.txt  main.cpp
02-Procesai-gijos/elementari_programa_openmp/: CMakeLists.txt  main.cpp
02-Procesai-gijos/elementary_program_rust/: Cargo.toml
02-Procesai-gijos/elemetari programa go/: main.go
02-Procesai-gijos/simple_program_cpp/: main.cpp
02-Procesai-gijos/simple_program_go/: main.go
02-Procesai-gijos/simple_program_rust/: Cargo.toml
03-Kritinė sekcija, monitoriai (1)/mailbox_one_to_one_cpp/: CMakeLists.txt  MailBox.cpp  MailBox.h  main.cpp
03-Kritinė sekcija, monitoriai (1)/simple_counter_rust/: Cargo.toml
03-Kritinė sekcija, monitoriai (1)/undefined_behaviour/: CMakeLists.txt  main.cpp
03-LP esmė/data-concurrency/: CMakeLists.txt  main.cpp
03-LP esmė/task_concurrency/: CMakeLists.txt  main.cpp
03-LP esmė/undefined_behaviour/: CMakeLists.txt  main.cpp
04-Kritinė sekcija, monitoriai, OpenMP gijos/MailboxCS/: MailboxCS.sln
04-Kritinė sekcija, monitoriai, OpenMP gijos/counter_omp/: CMakeLists.txt  main.cpp
04-Kritinė sekcija, monitoriai, OpenMP gijos/limited_buffer_go/: main.go
04-Kritinė sekcija, monitoriai, OpenMP gijos/mailbox_one_to_one_cpp/: CMakeLists.txt  MailBox.cpp  MailBox.h  main.cpp
04-Kritinė sekcija, monitoriai, OpenMP gijos/omp_locks/: CMakeLists.txt  main.cpp
05-Monitoriai-cpp-cs-openmp/fork_join/: main.cpp  (+1 more)
12-Thrust/thrust_vectors/: CMakeLists.txt  main.cu
(+356 files in other folders)
